--- a/ASPNet_Microservice/ASPNet_Microservice.csproj
+++ b/ASPNet_Microservice/ASPNet_Microservice.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="src\" />
+    <Folder Include="Tests\" />
+    <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
